# houdiniLab

./: README.md  pyproject.toml  pyproject.toml.bak
houdinilab/assetGallery/: update_asset_path.py
houdinilab/houdiniNet/: trie.py
houdinilab/projTools/: main.py
houdinilab/textureTools/: __init__.py  gen_files_folders.py  main.py  renameTexture.py
src/houdinilab/projTools/: rebelway.py
src/houdinilab/scripts/json/: courses.json  projects.json
src/houdinilab/scripts/python/: pythonrc.py
src/houdinilab/textureTools/: __init__.py  debug_script.py  main.py
tests/: get_hou_version.py
