[tool.poetry]
name = "houdinilab"
version = "0.1.0"
description = ""
authors = ["Suhail <suhailece@gmail.com>"]
readme = "README.md"
packages = [{include = "houdinilab", from = "src"}]

[tool.poetry.dependencies]
python = "3.11.7"
numpy = "^2.2.6"
pandas = "^2.2.3"
matplotlib = "^3.10.3"
scikit-learn = "^1.6.1"
pypdf = "^5.5.0"
oauthmanager = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
